Fix footer version mobile

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -78,7 +78,7 @@
            flex-direction: column-reverse;
             background-color:$second;
             width: 100%;
-            height: 28rem;
+            padding: 20%;
 
              a{
                
@@ -87,8 +87,9 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                
-            }
+                   
+         }
+        
 
             
     
